Fixed z-index issue between polygon image and SearchBar

--- a/src/App.scss
+++ b/src/App.scss
@@ -18,6 +18,10 @@ code {
   background: linear-gradient(359.67deg, #EFEEEE 0.46%, #FFFFFF 99.42%);;
   color: #5A3D5C;
 
+  * {
+    z-index: 2;
+  }
+
   .intro {
     display: flex;
     justify-content: space-between;
@@ -25,7 +29,6 @@ code {
     padding: 0 100px;
 
     p { font-size: 2.5rem; }
-    img { z-index: 2; }
     .left .search-bar {
       margin-top: 1rem;
     }
@@ -35,5 +38,6 @@ code {
     top: 0;
     right: 0;
     width: 64vw;
+    z-index: 1;
   }
 }
